# agentic-workflow

./: README.md  pyproject.toml
docs/: architecture.md
reports/: agent_eval.md
src/agentic_workflow/: __init__.py  agent.py  cli.py  domain.py  evaluation.py  guardrails.py  mock_ops.py  observed.py  planner.py  tools.py  tools_builtin.py  tracing.py
tests/: test_agent.py  test_cli.py  test_evaluation.py  test_guardrails.py  test_planner.py  test_tools_builtin.py  test_tracing.py
